<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"  
android:orientation="vertical"
android:layout_width="fill_parent"  
android:layout_height="fill_parent"
android:id="@+id/credits"
>
	<LinearLayout 
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
	>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="E.A.R.T.H."
		android:gravity="center"
		android:textSize="35sp"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="Electrical Appliance Recycle poinTs in Hellas"
		android:gravity="center"
		android:textSize="20sp"
		/>
		<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/g0"
		android:layout_centerHorizontal="true"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/ver"
		android:gravity="center"
		android:textSize="18sp"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="E.A.R.T.H. 2010 ALL RIGHTS RESERVED"
		android:gravity="center"
		android:textSize="15sp"
		/>
		<TextView
	    android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="................................."
		android:textSize="30sp"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="   "
		android:gravity="center"
		android:textSize="15sp"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/university"
		android:gravity="center"
		android:textSize="25sp"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/dept"
		android:gravity="center"
		android:textSize="20sp"
		android:id="@+id/dept"
		/>
		<TextView
	    android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="................................."
		android:textSize="30sp"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="   "
		android:gravity="center"
		android:textSize="15sp"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="E.A.R.T.H. Team"
		android:gravity="center"
		android:textSize="30sp"
		/>
		<TextView
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/dev1"
	    android:textSize="20sp"
	    android:gravity="center"
	    />
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/dev2"
		android:textSize="20sp"
		android:gravity="center"
		/>
	    <TextView
      	android:layout_width="fill_parent" 
      	android:layout_height="wrap_content" 
      	android:text="@string/dev3"
      	android:gravity="center"
      	android:textSize="20sp"
     	/>
	    <TextView
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/dev4"
	    android:gravity="center"
	    android:textSize="20sp"
	    />
     	<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="   "
		android:gravity="center"
		android:textSize="15sp"
		/>
		<TextView
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/sup"
	    android:gravity="center"
	    android:textSize="25sp"
	    />
	    <TextView
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/sup1"
	    android:gravity="center"
	    android:textSize="20sp"
	    />
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="   "
		android:gravity="center"
		android:textSize="15sp"
		/>
	</LinearLayout>
 </ScrollView>