<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"  
android:orientation="vertical"
android:layout_width="fill_parent"  
android:layout_height="fill_parent"
android:id="@+id/infoeco"
>
	<LinearLayout 
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
	>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="E.A.R.T.H."
		android:gravity="center"
		android:textSize="25sp"
		android:textColor="#348017"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="Electrical Appliance Recycling poinTs in Hellas"
		android:gravity="center"
		android:textSize="20sp"
		android:textColor="#348017"
		/>
		<ImageView 
		android:orientation="vertical"
		android:src="@drawable/g0"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="   "
		android:gravity="center"
		android:textSize="15sp"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/info_text"
		android:gravity="left"
		android:textSize="18sp"
		android:textColor="#348017"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:id="@+id/address"
		android:text="@string/address"
		android:gravity="left"
		android:textSize="18sp"
		android:textColor="#348017"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/info_text2"
		android:gravity="left"
		android:textSize="18sp"
		android:textColor="#348017"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="   "
		android:gravity="center"
		android:textSize="18sp"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/info_text3"
		android:gravity="left"
		android:textSize="18sp"
		android:textColor="#348017"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:id="@+id/address2"
		android:text="@string/address2"
		android:gravity="left"
		android:textSize="18sp"
		android:textColor="#348017"
		/>
		<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="   "
		android:gravity="center"
		android:textSize="18sp"
		/>
	</LinearLayout>
 </ScrollView>